@startuml

namespace Yacare.ComercioBundle.Entity {  
	class TramiteHabilitacionComercial <<class>> {
		+Comercio
		+UsoSuelo
		--
		+EstaListoParaTerminar()
	}

	class Actividad <<class>> {
		+ParentNode
		+Clanae1997
		+Clanae2010
		+ClaeAfip
		+DgrTdf
		+Clamae2014
		+CategoriaAntigua
		+CodigoCpu
		+Incluye
		+NoIncluye
		+Final
		+Etiquetas
		+Requistos
	}
	
	class ActividadEtiqueta <<class>> {
	   +Nombre
	}

	class Local <<class>> {
		+Tipo
		+Superficie
		+DepositoClase
		+VeredaMunicipal
		+Canaletas
		+CestoBasura
		+PuertaEmergencia
		+AnchoSalida
		+EnParqueIndustrial
	}

	class CertificadoHabilitacionComercial <<class>> {
		+Comercio
	}

	class DepositoClase <<class>> {
		+Categoria
		+Tipo
		+ClaseHasta300
		+ClaseHasta1000
		+ClaseMasDe1000
	}

	class Comercio <<class>> {
		+Estado
		+CertificadoHabilitacion
		+Local
		+Actividad1
		+Actividad2
		+Actividad3
		+Actividad4
		+Actividad5
		+Actividad6
	}
	
	class ConDatosComercio <<(T,#FF7700) trait>> {
		+Local
	}
	
	class ConActividades <<(T,#FF7700) trait>> {
		+Actividad1
		+Actividad2
		+Actividad3
		+Actividad4
		+Actividad5
		+Actividad6
	}
	


	TramiteHabilitacionComercial "0..n" o-- "1" Comercio : contiene
	TramiteHabilitacionComercial --|> Yacare.TramitesBundle.Entity.Tramite
	TramiteHabilitacionComercial "0..1" o-- "0..1" Yacare.CatastroBundle.Entity.UsoSuelo : puede tener

	CertificadoHabilitacionComercial --|> Yacare.TramitesBundle.Entity.Comprobante	
	CertificadoHabilitacionComercial "0..n" o-- "1" Comercio : contiene
	
	Actividad "0..n" o-- "0..n" ActividadEtiqueta : contiene
	Actividad "0..n" o-- "0..n" Yacare.TramitesBundle.Entity.Requisito : contiene
}

Yacare.ComercioBundle.Entity.Comercio ..|> Yacare.ComercioBundle.Entity.ConDatosComercio : implementa
Yacare.ComercioBundle.Entity.ConDatosComercio ..|> Yacare.ComercioBundle.Entity.ConActividades : implementa
Yacare.ComercioBundle.Entity.ConDatosComercio "1" o-- "0..1" Yacare.ComercioBundle.Entity.Local : puede tener
Yacare.ComercioBundle.Entity.ConActividades "1" o-- "0..n" Yacare.ComercioBundle.Entity.Actividad : contiene
Yacare.ComercioBundle.Entity.TramiteHabilitacionComercial ..|> Yacare.ComercioBundle.Entity.ConDatosComercio : implementa
Yacare.ComercioBundle.Entity.Local "1" o-- "0..1" Yacare.ComercioBundle.Entity.DepositoClase : puede tener
Yacare.ComercioBundle.Entity.Local "1" o-- "0..1" Yacare.CatastroBundle.Entity.Partida : puede tener

@enduml
